Fix CI paths for cleaning data

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
           cd tests/example_app
 
           # Ensure the tests are using clean data.
-          rm -rf tests/example_app/db
-          rm tests/example_app/alembic.ini
+          rm -rf db/
+          rm alembic.ini
           sed -i "s|db/seeds.py|a/b/c/seeds.py|g" example/app.py
 
           flask db migrate -h
