--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: "Install dependencies and local package"
         run: |
-          pip3 install Flask==1.1.2
+          pip3 install Flask==1.1.2 alembic==1.4.3
           make install
 
       - name: "Ensure everything works"
