Bring back the rm on alembic.ini
Later parts of the CI run depend on that file existing and being
modified based on using a custom init directory.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
           cd tests/example_app
 
           rm -rf db/
+          rm alembic.ini
           sed -i "s|db/seeds.py|a/b/c/seeds.py|g" example/app.py
 
           flask db migrate -h
