--- a/flask_db/templates/alembic.ini
+++ b/flask_db/templates/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = $SCRIPT_LOCATION
+script_location = SCRIPT_LOCATION
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
